# icss

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
notebooks/: HW1.ipynb  HW2.ipynb  N1.ipynb  N2.ipynb
slides/P1/: P1.tex
slides/P10/: P10.tex
slides/P11/: P11.tex
slides/P12/: P12.tex
slides/P2/: P2.tex
slides/P3/: P3.tex
slides/P4/: P4.tex
slides/P5/: P5.tex
slides/P6/: P6.tex
slides/P7/: P7.tex
slides/P8/: P8.tex
slides/P9/: P9.tex
